feat(#7):Develop backend Login Class related